# tcebs-template

./: .env.template  README.md  buildspec.yml
app/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
terraform/: imagedefinitions.json  main.tf  variable.tf
terraform/modules/alb/: main.tf  variable.tf
terraform/modules/codepipeline/: main.tf  variable.tf
terraform/modules/ecr/: main.tf
terraform/modules/ecs/: main.tf  variable.tf
terraform/modules/iam/: main.tf
terraform/modules/network/: main.tf
terraform/modules/security_group/: main.tf
